components/expander/styles.scss
.expander {
  margin-bottom: 1rem;
}

.header {
  background: white;
  border: 1px solid #bbb;
  border-radius: 5px;
  box-shadow: 0.1rem 0.1rem 0.2rem rgba(0, 0, 0, 0.2);
  cursor: pointer;
  overflow: hidden;
  position: relative;

  .colored_bar {
    background: grey;
    height: 5px;
  }

  .text {
    font-size: 0.9rem;
    font-weight: 500;
    padding: 0.3rem 0.7rem 0.4rem 0.7rem;
    display: flex;
    justify-content: space-between;
    align-items: center;

    &:after {
      content: ">";
      margin-left: 0.5rem;
      font-size: 1.2rem;
      font-weight: bold;
    }
  }
}

.inner {
  display: none;

  & > p {
    margin: 1.5rem 0.5rem 2rem 0.5rem;
  }
}

.expanded {
  .header .text:after {
    transform: rotate(90deg);
  }

  .inner {
    display: block;
  }
}

.sticky {
  .header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    box-sizing: border-box;
    border: none;
    border-radius: 0;
  }
}

:global(.green) .colored_bar {
  background: rgb(108, 187, 154);
}

:global(.yellow) .colored_bar {
  background: rgb(211, 191, 115);
}

:global(.blue) .colored_bar {
  background: rgb(70, 137, 168);
}

:global(.red) .colored_bar {
  background: rgb(187, 107, 115);
}

:global(.purple) .colored_bar {
  background: rgb(112, 99, 142);;
}

:global(.black) .colored_bar {
  background: rgb(51, 51, 51);;
}

